Fix overflow issue by ensuring horizontal overflow is hidden in the body

--- a/css/common/reset.css
+++ b/css/common/reset.css
@@ -7,6 +7,9 @@
 *::after {
     box-sizing: border-box;
 }
+body {
+    overflow-x: hidden;
+}
 
 html {
     -webkit-text-size-adjust: 100%;
